# NucleoFreeRtos

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.txt  arm-gcc-toolchain.cmake  build.bat
config/: stm32g4x.cfg
libs/: __CMakeLists.txt
src/: main.cpp
